--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.9.0
   permission_handler: ^11.3.1
   http: ^1.2.2
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
