앱 아이콘 및 이름 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
-        android:label="capston"
+        android:label="MOTO PEEK"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
