--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.2.2
   url_launcher: ^6.0.20
+  firebase_core: ^3.7.0
+  cloud_firestore: ^5.4.5
+  firebase_auth: ^5.3.2
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +62,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/title_image.png
+    - assets/
+    - assets/cars/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
