--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,16 @@ dependencies:
   camera: ^0.11.0+2
   path_provider: ^2.1.4
   path: ^1.9.0
-  permission_handler: ^11.3.1
+  permission_handler: ^10.4.5
   http: ^1.2.2
   url_launcher: ^6.0.20
   firebase_core: ^3.7.0
   cloud_firestore: ^5.4.5
   firebase_auth: ^5.3.2
+  flutter_rating_bar: ^4.0.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.7
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
